fix: desktop sidebar spacing

--- a/frappe/public/scss/desktop.scss
+++ b/frappe/public/scss/desktop.scss
@@ -9,8 +9,9 @@ html, body {
 }
 
 .desk-sidebar {
-	.list-sidebar-label {
-		margin-bottom: 1rem;
+	.sidebar-section .sidebar-label {
+		margin-bottom: var(--margin-md);
+		margin-top: var(--margin-sm);
 	}
 
 	.desk-sidebar-item {
@@ -59,7 +60,7 @@ html, body {
 			color: var(--heading-color);
 			font-weight: 600;
 			font-size: var(--text-lg);
-			margin-bottom: 1.2rem;
+			margin-bottom: var(--margin-md);
 		}
 	}
 
@@ -275,7 +276,8 @@ html, body {
 	}
 
 	&.onboarding-widget-box {
-		margin-bottom: 50px;
+		margin-top: var(--margin-xs);
+		margin-bottom: var(--margin-2xl);
 
 		.widget-head {
 			display: flex;
